tests/rgs/syntax_errors/when_missing_event.rgs
STORY DEFAULT.
    AGENT Guard:
        ACTION patrol.
        EVENT idle MYSELF.
        DURING ALWAYS:
            WHEN MYSELF:
                DO patrol.
